@@ -1,25 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.simtechdata</groupId>
     <artifactId>OTPURI</artifactId>
-    <version>1.0.6</version>
+    <version>1.2.1</version>
     <packaging>jar</packaging>
-
     <name>${project.artifactId}</name>
     <description>A Utility Library that makes generating properly formatted One Time Password OTPAuth Strings simple.</description>
     <url>https://github.com/EasyG0ing1/${project.artifactId}</url>
-
     <licenses>
         <license>
             <name>The Apache License, Version 2.0</name>
             <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
-
     <developers>
         <developer>
             <name>Mike Sims</name>
@@ -34,20 +28,29 @@
             </roles>
         </developer>
     </developers>
-
     <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
+        <javafx.version>17</javafx.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-javadoc-plugin>3.6.0</maven-javadoc-plugin>
+        <maven-toolchains-plugin>3.1.0</maven-toolchains-plugin>
+        <maven-jar-plugin>3.3.0</maven-jar-plugin>
+        <maven-release-plugin>3.0.1</maven-release-plugin>
+        <maven-source-plugin>3.3.0</maven-source-plugin>
+        <maven-gpg-plugin>3.1.0</maven-gpg-plugin>
+        <nexus-staging-maven-plugin>1.6.13</nexus-staging-maven-plugin>
+        <maven-deploy-plugin>3.1.1</maven-deploy-plugin>
+        <maven-compiler-plugin>3.11.0</maven-compiler-plugin>
+        <versions-maven-plugin>2.16.1</versions-maven-plugin>
+        <maven-scm-provider-gitexe>2.0.1</maven-scm-provider-gitexe>
     </properties>
-
     <scm>
         <connection>scm:git:git://github.com/EasyG0ing1/OTPURI.git</connection>
         <developerConnection>scm:git:git@github.com:EasyG0ing1/OTPURI.git</developerConnection>
         <url>https://github.com/EasyG0ing1/OTPURI</url>
         <tag>HEAD</tag>
     </scm>
-
     <profiles>
         <!-- GPG signature on release -->
         <profile>
@@ -63,7 +66,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>${maven-gpg-plugin}</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -78,7 +81,6 @@
             </build>
         </profile>
     </profiles>
-
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -89,43 +91,44 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
     <dependencies>
         <dependency>
             <groupId>com.warrenstrange</groupId>
             <artifactId>googleauth</artifactId>
             <version>1.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.2</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
-            <!-- Maven Toolchains -->
+            <!--Maven Versions-->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-toolchains-plugin</artifactId>
-                <version>3.1.0</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>${versions-maven-plugin}</version>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>toolchain</goal>
+                            <goal>display-dependency-updates</goal>
+                            <goal>display-plugin-updates</goal>
+                            <goal>property-updates-report</goal>
+                            <goal>dependency-updates-report</goal>
+                            <goal>plugin-updates-report</goal>
+                            <goal>update-properties</goal>
+                            <goal>use-latest-versions</goal>
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <toolchains>
-                        <jdk>
-                            <version>18.0.2</version>
-                            <vendor>sun</vendor>
-                        </jdk>
-                    </toolchains>
-                </configuration>
             </plugin>
             <!-- Nexus staging Maven plugin -->
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.13</version>
+                <version>${nexus-staging-maven-plugin}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -137,7 +140,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>${maven-deploy-plugin}</version>
                 <executions>
                     <execution>
                         <id>default-deploy</id>
@@ -152,7 +155,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>${maven-jar-plugin}</version>
                 <configuration>
                     <skipIfEmpty>true</skipIfEmpty>
                     <archive>
@@ -168,7 +171,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <version>${maven-release-plugin}</version>
                 <configuration>
                     <localCheckout>true</localCheckout>
                     <pushChanges>false</pushChanges>
@@ -178,7 +181,7 @@
                     <dependency>
                         <groupId>org.apache.maven.scm</groupId>
                         <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>2.0.0-M3</version>
+                        <version>${maven-scm-provider-gitexe}</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -186,7 +189,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>${maven-source-plugin}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -209,7 +212,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>${maven-javadoc-plugin}</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <author>true</author>
@@ -231,7 +234,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>${maven-gpg-plugin}</version>
                 <executions>
                     <execution>
                         <id>sign-artifact</id>
@@ -246,11 +249,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.0</version>
+                <version>${maven-compiler-plugin}</version>
                 <configuration>
-                    <source>18</source>
-                    <target>18</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
+                    <!--<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                 </configuration>
                 <executions>
                     <execution>
